# another-python-client

./: .gitignore  pyproject.toml  requirements.txt
cozo_client/: __init__.py  _builder.py  _client.py
